<resources>
    <string name="app_name">Crypto Stats</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_sum">Summary</string>
    <string name="detail_res">Resources</string>
    <string name="detail_web">Website</string>
    <string name="detail_market">Market</string>
    <string name="detail_market_cap">Market cap</string>
    <string name="none">N/A</string>
    <string name="detail_max_supply">Max supply</string>
    <string name="detail_circulating_supply">Circulating supply</string>
    <string name="no_crypto_watch">No cryptocurrency on your Watchlist. Click add \"icon\"!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="title_news">News</string>
    <string name="title_extra">Extra</string>
    <string name="title_settings">Settings</string>
    <string name="label_watchlist">Watchlist</string>
    <string name="label_crypto_detail">Crypto Detail</string>
    <string name="label_all_crypto">Follow Crypto</string>
    <string name="label_news">News</string>
    <string name="label_extra">Coin of the day</string>
    <string name="label_settings">Settings</string>
    <string name="title_switch_pref">Enable crypto notifications</string>
    <string name="title_language_pref">Language</string>
    <string name="title_currency_pref">Currency</string>
    <string name="title_list_curr_pref">Select Currency</string>
    <string name="item_removed">removed</string>
    <string name="undo_item">UNDO</string>
    <string name="k_value">K</string>
    <string name="million_value">Million</string>
    <string name="billion_value">Billion</string>
    <string name="ultra_billion_value">Trillion</string>
    <string name="ultra1_billion_value">Trillion</string>
    <string name="ultra2_billion_value">Quadrillion</string>
    <string name="ultra3_billion_value">Quintillion</string>
    <string name="notif_increase">up</string>
    <string name="notif_decrease">down</string>
    <string name="notif_desc">*name* (*symbol*) is *increment* *sign**perc*% in the last hour</string>
    <string name="title_language_list">Select Language</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="title_notif">Price Alert</string>
    <string name="add_top_bar">Add</string>
    <string name="notif_app_bar">Notification</string>
</resources>