<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_notifications_black_24dp"
        app:title="@string/title_notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notifications"
            app:title="@string/title_switch_pref" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_currency"
        app:title="@string/title_currency_pref">

        <ListPreference
            app:defaultValue="USD"
            app:entries="@array/currencies_entries"
            app:entryValues="@array/currencies_values"
            app:key="currencies"
            app:title="@string/title_list_curr_pref"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>